feat: update arg line at graph
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>